# program_fleetsync

./: .gitignore  FleetSync.spec  LICENSE  README.md  pyproject.toml
extra_exefiles/: LICENSE.txt  PRIVACY_NOTICE.txt  TERMS_AND_CONDITIONS.txt  THIRD_PARTY_NOTICES.txt
extra_exefiles/licenses/: README.txt  setuptools-82.0.0.txt  tzdata-2025.3.txt
profiles/: example_minimal_total_only.json  example_scope_sheets_summary.json  example_tokens_and_summaries.json  profile_template_v2.txt
profiles/Exempel/: example_split_by_category.json  profile_template_v2.json
profiles/Färdtjänst/: TRELLEBORG_ARB.json  TRELLEBORG_DAGLIG.json  TRELLEBORG_DV.json  TRELLEBORG_FTJ.json  VELLINGE_ARB.json  VELLINGE_FTJ.json
profiles/Skolor/: BURLÖV_SKOLOR.json  BURLÖV_SKOLOR_AnpassadGrund.json  BURLÖV_SKOLOR_AnpassadGymnasie.json  HÖRBY_SKOLOR.json  LOMMA_SKOLOR.json  SJOBÖ_SKOLOR.json  SVEDALA_SKOLOR.json  TRELLEBORG_SKOLOR.json  VELLINGE_SKOLOR.json
src/fleetsync_final/: __init__.py  artifacts.py  columns.py  execute.py  export_writer.py  json_canonical.py  loader.py  metadata.py  models.py  naming.py  naming_columns.py  path_utils.py  post_write_validator.py  profile_compiler.py  profile_io.py  profile_validate.py  rows.py  run_job.py  split.py  summaries.py  summary_registry.py  tokens.py  validation.py
src/fleetsync_ui/: __init__.py  __main__.py  app.py  main_window.py  state.py  strings_sv.py
src/fleetsync_ui/resources/: README.md
src/fleetsync_ui/services/: __init__.py  backend_facade.py  batch_summary.py  dto.py  file_probe.py  probe_cache.py  probe_scan_constants.py  (+12 more)
(+11 files in other folders)
