[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "program-fleetsync"
version = "0.1.0"
description = "Program-only FleetSync runtime (UI + backend)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.6",
  "openpyxl>=3.1",
  "pandas>=2.0",
]

[project.scripts]
fleetsync-ui = "fleetsync_ui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
